--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Manuel</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="assets/img/icone.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/img/KARSPZRAK.jpg" type="image/x-icon">
 	<!-- <script src="js.js"></script> -->
 	<meta name="viewport" content="width=device-width">
 	<!-- <style>
