--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 
 	<div>
 		<h1>Liens rapides :</h1>
-		<button onclick="changerURL(9782091317113, 'nathan')">
+		<h1>PS: Envoyez-moi un message si vous voulez votre manuel ici</h3>
+		<button onclick="changerURL('terminale/histoire-terminale', 'belin')">
 			<h1>Histoire</h1>
 		</button>
-		<button onclick="changerURL(9782091317243, 'nathan')">
+		<button onclick="changerURL('terminale/geographie-terminale', 'belin')">
 			<h1>Géographie</h1>
 		</button>
-		<button onclick="changerURL(9782047390726, 'nathan')">
+		<button onclick="changerURL(9782210114319, 'magnard')">
 			<h1>EMC</h1>
 		</button>
-		<button onclick="changerURL(9782016289853, 'hachette')">
+		<button onclick="changerURL(9782016290101, 'hachette')">
 			<h1>Maths Expertes</h1>
 		</button>
-		<h3>Envoyez-moi un message si vous voulez votre manuel ici</h3>
 	</div>
 
 	<div class="slider">
