--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
 			}
 		}
 
-		function changerURL(code, editionchoisie) {
+		function changerURL(code, ec) {
 			var server = document.querySelector('select[name="server"]').value;
 			console.log(server);
-			if (editionchoisie == 'hachette') {
+			if (ec == 'hachette') {
 				changerEdition('hachette');
 				editionchoisie()
 				var newUrl1 = "https://exobank.hachette-livre.fr/contents/final/" + code + "-fxl/OEBPS/Page_1.html?interface=postMessage";
@@ -254,7 +254,7 @@
 				a1.href = newUrl1;
 				a2.href = newUrl2;
 			}
-			else if ((editionchoisie == 'didier-hatier')) {
+			else if ((ec == 'didier-hatier')) {
 				changerEdition('didier-hatier');
 				editionchoisie()
 				var newUrl1 = "https://exobank.hachette-livre.fr/contents/final/" + code + "-fxl/OEBPS/page1.xhtml?interface=postMessage";
@@ -265,7 +265,7 @@
 				a2.href = newUrl2;
 			}
 			// https://nohamr.github.io/Manuelcontent/Belin/1ere/geographie-premiere/page1.jpg
-			else if (editionchoisie == 'belin') {
+			else if (ec == 'belin') {
 				changerEdition('belin');
 				editionchoisie()
 				var newUrl1 = "https://nohamr.github.io/Manuelcontent/Belin/" + code + "/page1.jpg";
@@ -276,7 +276,7 @@
 				a2.href = newUrl2;
 			}
 			// https://assets.lls.fr/books/48453088/print/14.jpg
-			else if (editionchoisie == 'LLS') {
+			else if (ec == 'LLS') {
 				changerEdition('LLS');
 				editionchoisie()
 				var newUrl1 = "https://assets.lls.fr/books/" + code + "/print/1.jpg";
@@ -287,7 +287,7 @@
 				a2.href = newUrl2;
 			}
 			// https://manuel.sesamath.net/imgs_produites/pages/ms6_2013/ms6_2013_page0.gif
-			else if (editionchoisie == 'sesa') {
+			else if (ec == 'sesa') {
 				changerEdition('sesa');
 				editionchoisie()
 				var newUrl1 = "https://raw.githubusercontent.com/NohamR/Manuelcontent/main/Sesamath/" + code + "/page0.gif";
@@ -301,7 +301,7 @@
 			// https://storage.libmanuels.fr/Magnard/specimen/9782210116252/4/OEBPS/page001.xhtml
 			// https://storage.libmanuels.fr/Magnard/specimen/9782210113183/9/OEBPS/page005.xhtml
 			// https://storage.libmanuels.fr/Magnard/specimen/9782210118201/1/OEBPS/page005.xhtml
-			else if (editionchoisie == 'magnard') {
+			else if (ec == 'magnard') {
 				changerEdition('magnard');
 				editionchoisie()
 				var newUrl1 = "https://storage.libmanuels.fr/Magnard/specimen/" + code + '/' + server + "/OEBPS/page002.xhtml?interface=postMessage";
@@ -312,7 +312,7 @@
 				a2.href = newUrl2;
 			}
 			// https://storage.libmanuels.fr/Delagrave/specimen/9782206103983/8/OEBPS/page005.xhtml
-			else if (editionchoisie == 'delagrave') {
+			else if (ec == 'delagrave') {
 				changerEdition('delagrave');
 				editionchoisie()
 				var newUrl1 = "https://storage.libmanuels.fr/Delagrave/specimen/" + code + '/' + server + "/OEBPS/page002.xhtml?interface=postMessage";
@@ -322,7 +322,7 @@
 				a1.href = newUrl1;
 				a2.href = newUrl2;
 			}
-			else if (editionchoisie == 'nathan') {
+			else if (ec == 'nathan') {
 				changerEdition('nathan');
 				editionchoisie()
 				var newUrl1 = "https://raw.githubusercontent.com/NohamR/Manuelcontent/main/Nathan/" + code + "/page1.jpg";
