--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div>
 		<label for="nbpage">Entrez la page :</label>
 		<input type="text" id="nbpage" name="nbpage" value="1" onchange="changerNBpage()">
-		<button onclick="changerNBpage()">update</button>
+		<button onclick="changerNBpage()">Appliquer</button>
 	</div>
 	<div class="slider">
 		<h1>Taille des pages: </h1>
