--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 			<h1>EMC</h1>
 		</button>
 		<button onclick="changerURL(9782016290101, 'hachette')">
-			<h1>Maths Expertes</h1>
+			<h1>Maths Exp.</h1>
+		</button>
+		<button onclick="changerURL(9782016290064, 'hachette')">
+			<h1>Maths Spé.</h1>
 		</button>
 	</div>
 	<div>
