--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 		<button onclick="changerURL(9782016290064, 'hachette')">
 			<h1>Maths Spé.</h1>
 		</button>
+		<button onclick="changerURL('terminale/hggsp-terminale', 'belin')">
+			<h1>HGGSP</h1>
+		</button>
 	</div>
 	<div>
 		<label for="nbpage">Entrez la page :</label>
